<resources>
    <string name="app_name">Wallpapers</string>
    <string name="categories_fragment">Categories fragment</string>
    <string name="photos_fragment">Photos fragment</string>
    <string name="favourite_fragment">Favourite fragment</string>
    <string name="downloaded_fragment">Downloaded fragment</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="photo_preview_fragment">Photo preview fragment</string>
    <string name="image_description">Image</string>
    <string name="categories">Categories</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="is_empty_text">Nothing is here yet:(</string>
    <string name="set_button">Set</string>
    <string name="set_wallpaper_msg">Wallpaper is setting…</string>
</resources>
